AMWA assigned ID BCP-008-02

--- a/spec.yml
+++ b/spec.yml
@@ -1,10 +1,10 @@
-amwa_id: BCP-TEMPLATE
-url: https://specs.amwa.tv/bcp-template
-name: AMWA NMOS Best Common Practice Template
-status: Continuing
-repo_name: bcp-template
+amwa_id: BCP-008-02
+url: https://specs.amwa.tv/bcp-008-02
+name: Sender Status
+status: Work In Progress
+repo_name: bcp-008-02
 alt_repo_name: nmos-bcp-template
-repo_url: https://github.com/AMWA-TV/bcp-template
+repo_url: https://github.com/AMWA-TV/bcp-008-02
 releases:
-default_branch: main
+default_branch: v1.0-dev
 show_in_index: false
