--- a/spec.yml
+++ b/spec.yml
@@ -7,4 +7,4 @@ alt_repo_name: nmos-bcp-template
 repo_url: https://github.com/AMWA-TV/bcp-008-02
 releases:
 default_branch: v1.0-dev
-show_in_index: false
+show_in_index: true
